Refactored sidebar and replaced links and posts

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -5,9 +5,9 @@ import Config from "../sarissa.config.cjs";
 <div class="divider"></div>
 <p class="text-sm pl-4">{Config.footer}</p>
 <p class="text-xs pl-4">
-  Build with <a class="link" href="https://astro.build/">Astro</a>
+  Built with <a class="link" href="https://astro.build/">Astro</a>
 </p>
 <p class="text-xs pl-4">
-  Sarissa theme desing by
+  Sarissa theme designed by
   <a class="link" href="https://github.com/iozcelik">iozcelik</a>
 </p>
