--- a/src/components/SiteImage.astro
+++ b/src/components/SiteImage.astro
@@ -3,7 +3,7 @@ import Config from "../sarissa.config.cjs";
 ---
 
 <div class="avatar w-60">
-  <div class="w-16 lg:w-32 rounded-full mx-auto">
+  <div class="w-16 lg:w-32 mx-auto">
     <img src={Config.siteImagePath} />
   </div>
 </div>
