Added images to 'About Us - Classes' and created 'Contact Us' page

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,46 +6,32 @@ import Config from "../sarissa.config.cjs";
 <PageLayout pageTitle={Config.menu.home}>
   <article class="prose max-w-none">
     <h2>Who We Are</h2>
-    <p><b>Toro Z Muay Thai</b> is a new gym in Sacramento dedicated to teaching and honing muay thai and its techniques.</p>
-    <p>
-      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eum nihil molestiae quaerat asperiores nobis ab ex rerum at impedit corporis sint inventore optio incidunt, cum consequatur repellat sunt sapiente molestias doloremque nulla. Illum odit architecto quasi dolorum veritatis nam impedit.
+    <p><b>Toro Z Muay Thai</b> is a new community-based gym in Sacramento dedicated to teaching
+      and honing muay thai and its techniques.
     </p>
+    <p>On top of a free trial period to help you decide whether the muay thai life is for you,
+      Toro Z boasts no initiation fee and no contracts to be as beginner-friendly as possible. We also
+      offer <b>Veteran</b> and <b>Student Discounts</b>, and conveniently located near Sacramento State
+      University, Green Acres Nursery, and Boulder Fields Rock Gym.
+    </p>
+    <p>Never expect to be judged when you walk through our doors: all people of all ages, all abilities
+      and all walks of life are welcome here at Toro Z. We strive to uphold a friendly atmosphere thanks
+      to our amazing coaches and want nothing more than for you to become the <b><i>you</i></b> you've always
+      imagined.
+    </p>
+    
 
     <h2>Classes</h2>
-    <h3>Morning Muay Thai</h3>
-    <h4>10:30am - 11:30am</h4>
-    <p>
-      
+    <img src="/images/referee.jpg" width="540" alt="A referee waiting to see a Toro Z fighter in action ;)">
+    <p>At Toro Z we believe anyone has what it takes to become a fighter on our <b>Fight Team</b>! Even if
+      you don't plan to compete, training with us is a surefire path to becoming a force to be reckoned with.
     </p>
-    <h3>Personals</h3>
-    <h4>11:30am - 5:00pm</h4>
-    <p>
-      Toro Z offers hour long personal training sessions where you can hone your fighting skills one on one with our coach.
-      For further details, feel free to contact Coach Iggy through the form below.
-    </p>
-    <h3>Kids' Class</h3>
-    <h4>5:00pm - 6:00pm</h4>
-    <p>
-      Start your young and rising fighters off early in Toro Z's Kids' Class! Students up to # years old
-      will learn the fundamentals
-    </p>
-    <h3>Fitness Class</h3>
-    <h4>6:00pm - 7:00pm</h4>
-    <p>
-      Toro Z's dedicated Fitness Class is less about the intricacies of fighting techniques and more about
-      building up the physical and mental fortitude that a fighter needs to succeed in the ring.
 
-    </p>
-    <h3>Evening Muay Thai (Beginner)</h3>
-    <h4>7:00pm - 8:00pm</h4>
-    <p>
-      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aliquam est modi amet molestias deserunt eius autem rem dolorem qui esse!
-    </p>
-    <h3>Evening Muay Thai (Advanced)</h3>
-    <h4>8:00pm - 9:00pm</h4>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos ratione, quod placeat impedit architecto molestias et modi totam doloremque laborum.</p>
+    
 
     <h2>How to Get Started</h2>
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempore, molestiae fugiat ex impedit odit possimus perspiciatis dolore nostrum enim vel dicta! Qui perspiciatis odio quia eius vel ipsa, eos reprehenderit?</p>
+    <p>Come on in! Our doors are always open from Monday to Saturday and there's no better time than the present to
+      get started. If you want any more information before coming in, please reach out to us on our <a href="/contact">Contact page</a>.
+    </p>
   </article>
 </PageLayout>
