--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -8,5 +8,42 @@ import Config from "../sarissa.config.cjs";
     <h2>Staff</h2>
     <h3>Coach: Ignacio Zambrano</h3>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores voluptatem atque tempora dolore nulla nisi, totam quisquam beatae illum omnis soluta, optio ullam dolor ducimus vel quaerat libero molestias aliquid eos porro facilis. Nisi atque incidunt commodi doloremque! Minima quod quisquam quibusdam eveniet, ducimus facilis!</p>
+    
+    <h2>Classes</h2>
+    <h3>Morning Muay Thai</h3>
+    <h4>10:30am - 11:30am</h4>
+    <p>Start your day off right with some muay thai!      
+    </p>
+    <h3>Personals</h3>
+    <h4>11:30am - 5:00pm</h4>
+    <img src="images/personals.jpg" width="540" alt="One of Toro Z's students after a personal lesson">
+    <p>Toro Z offers hour long personal training sessions where you can hone your fighting skills one on one with our coach.
+      For further details, feel free to contact Coach Iggy through the form on our contact page.
+    </p>
+    <h3>Kids' Class</h3>
+    <h4>5:00pm - 6:00pm</h4>
+    <p>Start your young and rising fighters off early in Toro Z's Kids' Class! Students up to () years old
+      will learn the fundamentals of muay thai.
+    </p>
+    <h3>Fitness Class</h3>
+    <h4>6:00pm - 7:00pm</h4>
+    <img src="/images/longjump.jpg" width="540" alt="Toro Z fighters doing a long jump drill">
+    <p>Toro Z's Fitness Class is dedicated to preparing the body and mind for the demands of a muay thai fighter.
+      Everything from partnered resistance band workouts to ladder drills to wallball are among the many ways
+      Toro Z uses to get you in shape and keep you there!
+    </p>
+    <h3>Evening Muay Thai (Beginner)</h3>
+    <h4>7:00pm - 8:00pm</h4>
+    <p>Many of our fighters began their muay thai stories in Toro Z's evening Beginner class. Everyone from our
+      newest students to our fighters preparing to win a title train under the same roof at the same time under
+      the guidance from our incredibly experienced coach. As a beginner, you can jump right in to drills and we'll
+      get you up to speed in no time.
+    </p>
+    <h3>Evening Muay Thai (Advanced)</h3>
+    <h4>8:00pm - 9:00pm</h4>
+    <img src="/images/advancedmuaythai.jpg" width="540" alt="Fighters in the Advanced class kicking bags and pads">
+    <p>Members of our fight team use the Advanced Muay Thai class to hone the techniques from the Beginner class
+      and put them into practice through live drills and sparring.
+    </p>
   </article>
 </PageLayout>
