--- a/src/components/CategoryButton.astro
+++ b/src/components/CategoryButton.astro
@@ -7,9 +7,7 @@ const countVisibility = Config.categorySettings.countVisibility;
 ---
 
 <a href={`../category/${category.name}/1`}>
-  <button
-    class={`btn gap-2 ${getCategoryColour(category.name)}`}
-  >
+  <button class={`btn gap-2 ${getCategoryColour(category.name)}`} >
     {category.name}
     {countVisibility && <div class="badge badge-secondary">{category.count}</div>}
   </button>
