--- a/src/components/Pagination.astro
+++ b/src/components/Pagination.astro
@@ -2,7 +2,13 @@
 import {Pagination} from '@sarissa/pagination';
 
 const { currentPage, totalPage, url } = Astro.props;
-
 ---
 
-<Pagination activeButton="btn-active" button="btn" buttonGroup="btn-group" disabledButton="btn-disabled" outerDiv="flex justify-center" currentPage={currentPage} totalPage={totalPage} url={url} />
+<Pagination
+  activeButton="btn-active"
+  button="btn"
+  buttonGroup="btn-group"
+  disabledButton="btn-disabled"
+  outerDiv="flex justify-center"
+  currentPage={currentPage}
+  totalPage={totalPage} url={url} />
