--- a/src/components/YearSelectBox.astro
+++ b/src/components/YearSelectBox.astro
@@ -12,13 +12,13 @@ let allYearsUnique = [...new Set(allYears.flat())];
 ---
     
 <select class="select select-bordered" onchange="this.options[this.selectedIndex].value && (window.location = this.options[this.selectedIndex].value);">
-    {currentYear?.toString()=="" 
-        ? <option disabled selected>{Config.i18n.archive.select}</option>
-        : <option disabled>{Config.i18n.archive.select}</option>}
-    {allYearsUnique.map((year) =>
-        currentYear?.toString() == year 
-            ? <option selected>{year}</option>
-            : <option value={`/archive/${year}/1`}>{year}</option>
-        
-    )}
+  {currentYear?.toString()=="" 
+    ? <option disabled selected>{Config.i18n.archive.select}</option>
+      : <option disabled>{Config.i18n.archive.select}</option>
+  }
+  {allYearsUnique.map((year) =>
+    currentYear?.toString() == year 
+      ? <option selected>{year}</option>
+        : <option value={`/archive/${year}/1`}>{year}</option>)
+  }
 </select>
