--- a/src/layouts/PostLayout.astro
+++ b/src/layouts/PostLayout.astro
@@ -12,17 +12,30 @@ const { content } = Astro.props;
     </div>
   </div>
   <div class="card bg-base-200 shadow-xl">
-    {content.image && <figure class="px-10 pt-10"><img width="400" height="225" src={content.image} /></figure>}
+    {content.image &&
+      <figure class="px-10 pt-10"><img width="400" height="225" src={content.image} /></figure>}
     <div class="card-body">
       <div class="flex flex-row justify-between">
         <div class="flex">
-    <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
-  <path stroke-linecap="round" stroke-linejoin="round" d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z" />
-</svg><div class="pl-1">{formatDate(content.date)}</div>
-  </div>
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            class="h-6 w-6"
+            fill="none"
+            viewBox="0 0 24 24"
+            stroke="currentColor"
+            stroke-width="2">
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z" />
+          </svg>
+          <div class="pl-1">{formatDate(content.date)}</div>
+        </div>
         <div class="flex gap-1">
-{content?.categories.map((category) => (  
-  <a href={`../category/${category}/1`}><div class={`btn btn-outline btn-xs ${ getCategoryColour(category)}`}>{category}</div></a>))}
+          {content?.categories.map((category) => (  
+            <a href={`../category/${category}/1`}>
+              <div class={`btn btn-outline btn-xs ${ getCategoryColour(category)}`}>{category}</div>
+            </a>))}
         </div>
       </div>
       <div class="divider"></div>
