Added email form to Contact page

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -7,8 +7,8 @@ import Config from "../sarissa.config.cjs";
   <article class="prose max-w-none">
     <h2>Staff</h2>
     <h3>Coach: Ignacio Zambrano</h3>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores voluptatem atque tempora dolore nulla nisi, totam quisquam beatae illum omnis soluta, optio ullam dolor ducimus vel quaerat libero molestias aliquid eos porro facilis. Nisi atque incidunt commodi doloremque! Minima quod quisquam quibusdam eveniet, ducimus facilis!</p>
-    
+    <p>Coach Iggy tg
+    </p>
     <h2>Classes</h2>
     <h3>Morning Muay Thai</h3>
     <h4>10:30am - 11:30am</h4>
