Added more pictures and information to 'About Us' page

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -7,27 +7,35 @@ import Config from "../sarissa.config.cjs";
   <article class="prose max-w-none">
     <h2>Staff</h2>
     <h3>Coach: Ignacio Zambrano</h3>
-    <p>Coach Iggy tg
+    <img src="images/coach.png" class="w-60 rounded-full"alt="Coach Iggy, founder of Toro Z Muay Thai" />
+    <p>Coach Iggy is a professional athlete who has competed in amateur and professional Muay Thai,
+      boxing, kickboxing and MMA for the past 15 years. He has fought for WCK and Roy Jones Jr. promotions.
+      He is an IKF Light Heavyweight and Cruiserweight champion. His foundation was shaped by Kru Sam,
+      Shawn House and Master Toddy.
     </p>
+
     <h2>Classes</h2>
     <h3>Morning Muay Thai</h3>
     <h4>10:30am - 11:30am</h4>
-    <p>Start your day off right with some muay thai!      
+    <p>Start your day off right with some muay thai! The <b>Morning Muay Thai</b> class covers drills
+      and workouts similar to the <b>Beginner Evening Muay Thai</b> class, just at a different part of
+      the day.
     </p>
     <h3>Personals</h3>
     <h4>11:30am - 5:00pm</h4>
-    <img src="images/personals.jpg" width="540" alt="One of Toro Z's students after a personal lesson">
+    <img src="images/personals.jpg" width="540" alt="One of Toro Z's students after a personal lesson" />
     <p>Toro Z offers hour long personal training sessions where you can hone your fighting skills one on one with our coach.
-      For further details, feel free to contact Coach Iggy through the form on our contact page.
+      For further details, feel free to contact Coach Iggy through the form on our <a href="/contact">Contact Us</a> page.
     </p>
     <h3>Kids' Class</h3>
     <h4>5:00pm - 6:00pm</h4>
-    <p>Start your young and rising fighters off early in Toro Z's Kids' Class! Students up to () years old
-      will learn the fundamentals of muay thai.
+    <img src="images/kidsclass.jpg" width="540" alt="One of Toro Z's youngest fighters" />
+    <p>Start your young and rising fighters off early in Toro Z's Kids' Class! Young fighters get the chance to
+      learn the art of eight limbs with others in their age group.
     </p>
     <h3>Fitness Class</h3>
     <h4>6:00pm - 7:00pm</h4>
-    <img src="/images/longjump.jpg" width="540" alt="Toro Z fighters doing a long jump drill">
+    <img src="/images/longjump.jpg" width="540" alt="Toro Z fighters doing a long jump drill" />
     <p>Toro Z's Fitness Class is dedicated to preparing the body and mind for the demands of a muay thai fighter.
       Everything from partnered resistance band workouts to ladder drills to wallball are among the many ways
       Toro Z uses to get you in shape and keep you there!
