--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,6 +6,7 @@ import Config from "../sarissa.config.cjs";
 <PageLayout pageTitle={Config.menu.home}>
   <article class="prose max-w-none">
     <h2>Who We Are</h2>
+    <img src="images/torozafterclass.jpg" width="540" alt="Aftermath of one of Toro Z's Morning Classes" />
     <p><b>Toro Z Muay Thai</b> is a new community-based gym in Sacramento dedicated to teaching
       and honing muay thai and its techniques.
     </p>
@@ -21,9 +22,18 @@ import Config from "../sarissa.config.cjs";
     </p>
     
     <h2>Classes</h2>
-    <img src="/images/referee.jpg" width="540" alt="A referee waiting to see a Toro Z fighter in action ;)">
+    <img src="/images/referee.jpg" width="540" alt="A referee waiting to see a Toro Z fighter in action" />
     <p>At Toro Z we believe anyone has what it takes to become a fighter on our <b>Fight Team</b>! Even if
       you don't plan to compete, training with us is a surefire path to becoming a force to be reckoned with.
+      We have classes for all age groups and skill levels, listed below:
+      <ul>
+        <li><b>Beginner Muay Thai</b></li>
+        <li><b>Advanced Muay Thai</b></li>
+        <li><b>Kids' Class</b></li>
+        <li><b>Fitness Class</b></li>
+        <li><b>Personals</b> (upon request)</li>
+      </ul>
+      For more information, check out the details on each class on our <a href="/about">About Us</a> page.
     </p>
 
     <h2>How to Get Started</h2>
