--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -17,7 +17,7 @@ import FeedbackForm from "../components/FeedbackForm.astro";
     
     <h2>Where to Reach Out</h2>
     <ul>
-      <li><b>Phone:</b> (209) 898-5311</li>
+      <li><b>Phone (preferred):</b> (209) 898-5311</li>
       <li><b>Email:</b> coach@torozmuaythai.com</li>
       <li>Alternatively, you can fill out the <b>submission form</b> below:</li>
     </ul>
