Fixed path to images served on 'About Us' page

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -7,7 +7,7 @@ import Config from "../sarissa.config.cjs";
   <article class="prose max-w-none">
     <h2>Staff</h2>
     <h3>Coach: Ignacio Zambrano</h3>
-    <img src="images/coach.png" class="w-60 rounded-full"alt="Coach Iggy, founder of Toro Z Muay Thai" />
+    <img src="/images/coach.png" class="w-60 rounded-full"alt="Coach Iggy, founder of Toro Z Muay Thai" />
     <p>Coach Iggy is a professional athlete who has competed in amateur and professional Muay Thai,
       boxing, kickboxing and MMA for the past 15 years. He has fought for WCK and Roy Jones Jr. promotions.
       He is an IKF Light Heavyweight and Cruiserweight champion. His foundation was shaped by Kru Sam,
@@ -23,13 +23,13 @@ import Config from "../sarissa.config.cjs";
     </p>
     <h3>Personals</h3>
     <h4>11:30am - 5:00pm</h4>
-    <img src="images/personals.jpg" width="540" alt="One of Toro Z's students after a personal lesson" />
+    <img src="/images/personals.jpg" width="540" alt="One of Toro Z's students after a personal lesson" />
     <p>Toro Z offers hour long personal training sessions where you can hone your fighting skills one on one with our coach.
       For further details, feel free to contact Coach Iggy through the form on our <a href="/contact">Contact Us</a> page.
     </p>
     <h3>Kids' Class</h3>
     <h4>5:00pm - 6:00pm</h4>
-    <img src="images/kidsclass.jpg" width="540" alt="One of Toro Z's youngest fighters" />
+    <img src="/images/kidsclass.jpg" width="540" alt="One of Toro Z's youngest fighters" />
     <p>Start your young and rising fighters off early in Toro Z's Kids' Class! Young fighters get the chance to
       learn the art of eight limbs with others in their age group.
     </p>
