--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,7 +6,7 @@ import Config from "../sarissa.config.cjs";
 <PageLayout pageTitle={Config.menu.home}>
   <article class="prose max-w-none">
     <h2>Who We Are</h2>
-    <img src="images/torozafterclass.jpg" width="540" alt="Aftermath of one of Toro Z's Morning Classes" />
+    <img src="/images/torozafterclass.jpg" width="540" alt="Aftermath of one of Toro Z's Morning Classes" />
     <p><b>Toro Z Muay Thai</b> is a new community-based gym in Sacramento dedicated to teaching
       and honing muay thai and its techniques.
     </p>
