Changed address and embedded map on Contact page

--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -7,10 +7,12 @@ import FeedbackForm from "../components/FeedbackForm.astro";
 <PageLayout pageTitle={Config.menu.contact}>
   <article class="prose max-w-none">
     <h2>Location</h2>
-    <p>8500 Fruitridge Rd<br>Sacramento, CA 95826</p>
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3121.385703473057!2d-121.3920001843995!3d38.5248762764203!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x809ac552c0fcde41%3A0x461ed7e2df176701!2sToro%20Z%20Muay%20Thai!5e0!3m2!1sen!2sus!4v1667968723464!5m2!1sen!2sus"
-      width="600" height="450"
+    <p>3749 Stockton Blvd<br>Sacramento, CA 95820<br>Suites A and B</p>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7005.971232995041!2d-121.45235786426646!3d38.538251886903495!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x809ad00b3f066703%3A0xb93851532f972739!2s3749%20Stockton%20Blvd%2C%20Sacramento%2C%20CA%2095820!5e0!3m2!1sen!2sus!4v1672088253632!5m2!1sen!2sus"
+      width="400"
+      height="300"
       style="border:0;"
+      allowfullscreen=""
       loading="lazy"
       referrerpolicy="no-referrer-when-downgrade">
     </iframe>
